--- a/django_D4/NewsPaper/news/templates/news/news_delete.html
+++ b/django_D4/NewsPaper/news/templates/news/news_delete.html
@@ -13,31 +13,21 @@
         </span>
     </a>
     <span class="navbar-brand text-white text-uppercase">
-    Подробнее
+    Подтвердите удаление этой новости
     </span>
     <span class="navbar-brand text-white text-uppercase">
         {{ post.title|Censor:""|truncatechars:25 }} >
     </span>
     {% endblock %}
-    {% block nav-container %}
-    <li class="nav-item">
-        <a class="nav-link text-white" href="{% url 'update' post.pk %}">
-            Редактировать
-        </a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link text-white" href="{% url 'delete' post.pk %}">
-            Удалить
-        </a>
-    </li>
-
-    {% endblock %}
-
-
 {% block content %}
 
     <h3>{{ post.title | Censor:"" }} </h3>
     <p> {{ post.text | Censor:"" }} </p>
     <h6>{{ post.dateCreation.date }}</h6>
     <a href="{{request.META.HTTP_REFERER|escape}}">вернуться к списку новостей</a>
-{% endblock %}
+
+
+<form method="POST">
+    {% csrf_token %}
+    <input type="submit" value="подтвердить"></form>
+{% endblock content %}
